--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,10 +7,10 @@
             "type": "chrome",
             "request": "launch",
             "url": "http://localhost:3000",
-            "webRoot": "${workspaceRoot}/client",
+            "webRoot": "${workspaceRoot}",
             "userDataDir": "${workspaceRoot}/.vscode/chrome",
             "sourceMapPathOverrides": {
-               "webRoot": "${workspaceRoot}/client"
+               "webRoot": "${workspaceRoot}"
             }
         } 
     ]
